fix tabs and article alignment

--- a/styles.css
+++ b/styles.css
@@ -11,21 +11,24 @@
 
 .image {
     background-image: url(Images/header_background_01.jpg);
-    width: 100%;
-    height: 150px;
+    display: grid;
+    grid-template-columns: 1fr;
+
 }
 
 .page_title {
-	padding-top: 50px;
+	padding-top: 60px;
+  padding-bottom: 60px;
 	color: white;
-	font-size: 50px;
+	font-size: 40px;
 	text-align: center;
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 .search_bar {
   overflow: hidden;
-  background-color: black;
-  
+  background-color: rgb(15, 15, 15);
 }
 
 .search_bar .search-container {
@@ -47,7 +50,7 @@
   margin-right: 0px;
   background: rgb(139, 139, 139);
   font-size: 16px;
-  border: none;
+  border-radius: 4px;
   cursor: pointer;
 }
 
@@ -63,8 +66,14 @@ body, html {
     font-family: Arial;
   }
   
-  .tablink {
-    background-color: rgb(102, 102, 102);
+  .tabs {
+    overflow: hidden;
+    background-color: black;
+  }
+
+
+  .tablinks {
+    background-color: black;
     color: white;
     float: left;
     border: none;
@@ -72,33 +81,68 @@ body, html {
     cursor: pointer;
     padding: 14px 16px;
     font-size: 18px;
-    width: 20%;
+    width: 25%;
     height: 7%;
   }
   
-  .tablink:hover {
-    background-color: rgb(92, 97, 104);
+  .tablinks:hover {
+    color: rgb(9, 80, 101);
+    font-size: 15pt;
+    font-weight: bold;
+    text-decoration: underline;
   }
-  
+
+
   .tabcontent {
     color: white;
-    display: none;
-    padding: 100px 20px;
+    padding: 20px 20px;
     height: 100%;
+  }
+
+  .tabs button.active {
+    color: rgb(37, 150, 190);
+    font-size: 16pt;
+    font-weight: bold;
+    text-decoration: underline;
   }
   
   #Home {
-    background-color: rgb(58, 61, 65);
+    background-color: black;
   }
   #All_Blogs {
-    background-color: rgb(58, 61, 65);
-  }
-  #Forums {
-    background-color: rgb(58, 61, 65);
+    background-color: black;
   }
   #About_Me {
-    background-color: rgb(58, 61, 65);
+    background-color: black;
   }
   #Recommended_Resources {
-    background-color: rgb(58, 61, 65);
+    background-color: black;
+  }
+
+  article {
+    display: grid;
+    grid-template-columns: 1fr 0.5in [start] 10.5in [end] 0.5in 1fr;
+    border: 2px white;
+    border-style: solid;
+    border-radius: 12px;
+    padding: 12px 0px 12px 0px;
+    margin-top: 20px;
+    margin-bottom: 35px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  article * { grid-column: start / end; }
+
+@media (max-width: 11.5in) {
+  article { grid-template-columns: 1fr 5% [start] 90% [end] 5% 1fr;}
+}
+
+
+
+  .article_title {
+    font-size: 16pt;
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 12px;
   }
